<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:context=".Activities.stats"
    tools:showIn="@layout/activity_stats">


    <!-- Character name-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avatarName"
        android:textSize="20sp"
        android:id="@+id/textView5"

        android:layout_centerHorizontal="true"/>

    <!-- character image-->
    <ImageView
        android:layout_width="@android:dimen/thumbnail_height"
        android:layout_height="@android:dimen/thumbnail_width"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/character"
        android:id="@+id/avatarImageProfile"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <!-- avatar status message -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avatarStatus"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"/>


    <!-- intelligence icon-->
    <ImageView
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_gravity="center_vertical"
        android:src="@drawable/intel"
        android:id="@+id/avatarImageProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/progressBar" />

    <!-- intelligence Bar-->
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="@dimen/design_tab_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:background="#0474ac"
        android:textAlignment="center"
        android:progressBackgroundTint="#370404"
        android:layout_above="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:progressTint="#78f2f0" />

    <!-- intelligence text-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Intelligence:"
        android:textSize="22dp"
        android:id="@+id/textView"
        android:layout_above="@+id/progressBar"
        android:layout_centerHorizontal="true"/>

    <!-- fitness icon-->
    <ImageView
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/str"
        android:id="@+id/avatarImageProfile"
        android:contentDescription="2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/progressBar2"/>

    <!-- fitness Bar-->
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="@dimen/design_tab_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:background="#196003"
        android:clickable="false"
        android:progress="80"
        android:progressBackgroundTint="#370404"
        android:progressTint="#5ff865"
        android:layout_above="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <!-- fitness Text-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fitness:"
        android:textSize="22dp"
        android:id="@+id/textView2"
        android:layout_above="@+id/progressBar2"
        android:layout_centerHorizontal="true"/>

    <!-- health icon-->
    <ImageView
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/health"
        android:id="@+id/avatarImageProfile"
        android:contentDescription="@string/statImage"
        android:layout_alignBottom="@+id/progressBar3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- Health Bar-->
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="@dimen/design_tab_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar3"
        android:background="#820c06"
        android:progress="60"
        android:progressBackgroundTint="#370404"
        android:progressTint="#f50b07"
        android:layout_above="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!-- Health text-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Health:"
        android:textSize="22dp"
        android:id="@+id/textView3"
        android:layout_above="@id/progressBar3"
        android:layout_centerHorizontal="true"/>

    <!-- charisma icon-->
    <ImageView
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:src="@drawable/smile"
        android:id="@+id/avatarImageProfile"
        android:layout_alignLeft="@+id/progressBar4"
        android:layout_alignBottom="@id/progressBar4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- charisma bar-->
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="@dimen/design_tab_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar4"
        android:background="#bb2fcc"
        android:progress="20"
        android:progressBackgroundTint="#370404"
        android:progressTint="#cafe00dc"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="64dp" />

    <!-- charisma text-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Charisma:"
        android:textSize="22dp"
        android:id="@+id/textView4"
        android:layout_above="@id/progressBar4"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
